--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Tushar Nagarajan
+title: Taki Hasan Rafi
 baseurl: "" # the subpath of your site, e.g. /blog/
 
 # Build settings
